fix: heading hidden behind navbar & tweak heading color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -153,3 +153,18 @@ em.highlight {
 img.full-mobile {
   margin: 2rem 0;
 }
+
+.mdx-content h2,
+.mdx-content h3 {
+  scroll-margin-top: 6.5rem;
+}
+
+.mdx-content h2 a,
+.mdx-content h3 a {
+  color: inherit;
+}
+
+.mdx-content h2 a:hover,
+.mdx-content h3 a:hover {
+  @apply text-lightPurple;
+}
